--- a/CMakeSettings_GA.json
+++ b/CMakeSettings_GA.json
@@ -13,12 +13,12 @@
       "variables": [
         {
           "name": "LIBTCOD_INCLUDE_DIR",
-          "value": "libtcod/include",
+          "value": "libtcod-1.16.0-alpha.3-x86_64-mingw/include",
           "type": "PATH"
         },
         {
           "name": "LIBTCOD_LIB_DIR",
-          "value": "libtcod/lib",
+          "value": "libtcod-1.16.0-alpha.3-x86_64-mingw",
           "type": "PATH"
         }
       ]
