--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: download libTCOD
-      run: wget https://github.com/libtcod/libtcod/releases/download/1.16.0-alpha.3/libtcod-1.16.0-alpha.3-x86_64-mingw.zip -O ${{ github.workspace }}/libtcod.zip
+      run: wget http://launchpadlibrarian.net/350686578/libtcod-dev_1.6.4+dfsg-2_amd64.deb -O ${{ github.workspace }}/libtcod.deb
       
-    - name: extract libTCOD
-      run: unzip ${{ github.workspace }}/libtcod.zip
+    - name: install libTCOD deb
+      run: sudo apt install ${{ github.workspace }}/libtcod.deb
       
     - name: run-cmake
       uses: lukka/run-cmake@v2.0
