--- a/CMakeSettings_GA.json
+++ b/CMakeSettings_GA.json
@@ -18,7 +18,7 @@
         },
         {
           "name": "LIBTCOD_LIB",
-          "value": "${buildRoot}/libtcod-1.16.0-alpha.3-x86_64-mingw/libtcod.a",
+          "value": "libtcod-1.16.0-alpha.3-x86_64-mingw/libtcod.a",
           "type": "PATH"
         }
       ]
