Remove extra CMakeLIsts file and update workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
         # Select the mode of the action. There are three different modes: CMakeListsTxtBasic: Run CMake using a CMakeLists.txt - Basic configuration, CMakeListsTxtAdvanced: Run CMake using a CMakeLists.txt - Advanced configuration, CMakeSettingsJson: Run CMake using a CMakeSettings.json of Visual Studio.
         cmakeListsOrSettingsJson: CMakeSettingsJson
         # Path to CMakeLists.txt. Used for both CMakeListsTxtBasic and CMakeListsTxtAdvanced modes.
-        cmakeListsTxtPath: ${{ github.workspace }}/CMakeLists_GA.txt
+        cmakeListsTxtPath: ${{ github.workspace }}/CMakeLists.txt
         # Path to CMakeSettings.json. Used for CMakeSettingsJson mode.
         cmakeSettingsJsonPath: ${{ github.workspace }}/CMakeSettings_GA.json
