--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(LIBTCOD_INCLUDE_DIR "${LIBTCOD_INCLUDE_DIR}" CACHE PATH "Location of libTCOD include directory")
 set(LIBTCOD_LIB "${LIBTCOD_LIB}" CACHE PATH "Location of libTCOD library")
 
-# add main executable
-add_executable(labquest labquest.cpp "node.cpp" "list.cpp" "coord.cpp" "items.cpp" "tiles.cpp" "room.cpp" "level.cpp" "agent.cpp" "player.cpp" "creature.cpp" "io.cpp" "labquest_test.cpp")
+if (WIN32)
+    # add main executable
+    add_executable(labquest labquest.cpp "node.cpp" "list.cpp" "coord.cpp" "items.cpp" "tiles.cpp" "room.cpp" "level.cpp" "agent.cpp" "player.cpp" "creature.cpp" "io.cpp")
 
-target_include_directories(labquest PUBLIC
-                           "${PROJECT_BINARY_DIR}"
-                           "${LIBTCOD_INCLUDE_DIR}"
-                           )
-target_link_libraries(labquest "${LIBTCOD_LIB}")
+    target_include_directories(labquest PUBLIC
+                               "${PROJECT_BINARY_DIR}"
+                               "${LIBTCOD_INCLUDE_DIR}"
+                               )
+    target_link_libraries(labquest "${LIBTCOD_LIB}")
+endif()
 
 # add test executable
-add_executable(labquest_test labquest_test.cpp "node.cpp" "list.cpp" "coord.cpp" "items.cpp" "tiles.cpp" "room.cpp" "level.cpp" "agent.cpp" "player.cpp" "creature.cpp" "labquest_test.cpp")
+add_executable(labquest_test labquest_test.cpp "node.cpp" "list.cpp" "coord.cpp" "items.cpp" "tiles.cpp" "room.cpp" "level.cpp" "agent.cpp" "player.cpp" "creature.cpp")
 
 target_include_directories(labquest PUBLIC
                            "${PROJECT_BINARY_DIR}"
