Add workflow step to run test target

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,7 @@ jobs:
         cmakeListsTxtPath: ${{ github.workspace }}/CMakeLists.txt
         # Path to CMakeSettings.json. Used for CMakeSettingsJson mode.
         cmakeSettingsJsonPath: ${{ github.workspace }}/CMakeSettings_GA.json
+    
+    - name: run-test-target
+      run: ${{ github.workspace }}/labquest_test
+    
