--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
         cmakeSettingsJsonPath: ${{ github.workspace }}/CMakeSettings_GA.json
     
     - name: list dirs
-      run: ls ${{ github.workspace }}/../../_temp
+      run: ls /home/runner/work/_temp/x64-Debug
 
     - name: run-test-target
-      run: ${{ github.workspace }}/../../_temp/labquest_test
+      run: /home/runner/work/_temp/x64-Debug/labquest_test
     
